--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -328,19 +328,17 @@ body:not(.editing) {
                 height: 100px;
                 //display: block;
                 z-index: 1000;
-                span.inplaceeditable {
-                    a:first-of-type {
-                        @include title;
-                        text-transform: uppercase;
-                        position: absolute;
-                        width: 100%;
-                        height: 100px;
-                        display: block;
-                        z-index: 1000;
-                        &:hover {
-                            text-decoration: none !important;
-                            background-color: rgba(0, 0, 0, 0.1) !important;
-                        }
+                a:first-of-type {
+                    @include title;
+                    text-transform: uppercase;
+                    position: absolute;
+                    width: 100%;
+                    height: 100px;
+                    display: block;
+                    z-index: 1000;
+                    &:hover {
+                        text-decoration: none;
+                        background-color: rgba(0, 0, 0, 0.1);
                     }
                 }
             }
