padding en nombre largo tarjeta

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -351,7 +351,7 @@ body:not(.editing) {
             }
         }
         .content {
-            padding-top: 20px;
+            padding-top: 20px !important;
             .my-3 {
                 .course-description-item.summarytext {
                     .description-inner {
