--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -367,7 +367,7 @@ body:not(.editing) {
                             }
                             p.fecha {
                                 position: absolute;
-                                bottom: 13%;
+                                bottom: 17px;
                                 right: 7px;
                                 line-height: 130%;
                                 text-align: right;
