--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -314,27 +314,30 @@ body:not(.home) {
 
 body:not(.editing) {
     li:not(#section-0).section {
-        min-height: 140px;
-        padding: 2rem !important;
+        position: relative;
+        min-height: 12rem;
         border-bottom: 0;
         margin-bottom: 4rem;
+        padding: 0 !important;
         .course-section-header {
-            position: relative;
-            /* width: 100%;
+            position: absolute;
+            width: 100%;
             height: 100%;
-            display: block; */
             h3.sectionname {
                 position: absolute;
                 width: 100%;
-                height: 100px;
+                height: 100%;
                 //display: block;
                 z-index: 1000;
                 a:first-of-type {
                     @include title;
                     text-transform: uppercase;
                     position: absolute;
+                    top: 0;
+                    left: 0;
+                    padding: 3rem 1.5rem;
                     width: 100%;
-                    height: 100px;
+                    height: 100%;
                     display: block;
                     z-index: 1000;
                     &:hover {
@@ -342,33 +345,50 @@ body:not(.editing) {
                         background-color: rgba(0, 0, 0, 0.1);
                     }
                 }
-                a.quickeditlink.aalink {
-                    display: none;
-                }
-            }
-            .section_action_menu {
-                //z-index: 2000 !important;
+                /* a.quickeditlink.aalink {
+                    position: absolute;
+                    top: 0;
+                    left: 1.5rem;
+                } */
             }
         }
         .content {
-            padding-top: 50px !important;
+            //padding-top: 50px !important;
+            position: absolute;
+            width: 100%;
+            height: 100%;
             .my-3 {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                margin-top: 0 !important;
                 .course-description-item.summarytext {
                     margin: 0 !important;
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
                     .description-inner {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
                         .no-overflow {
                             position: relative;
+                            width: 100%;
+                            height: 100%;
                             margin-top: 0 !important;
                             h2 {
                                 @include subtitle;
                                 border: none !important;
                                 background-color: transparent;
                                 padding: 0 !important;
+                                position: absolute;
+                                bottom: 3rem;
+                                left: 1.5rem;
                             }
                             p.fecha {
                                 position: absolute;
-                                bottom: 17px;
-                                right: 7px;
+                                bottom: 4rem;
+                                right: 1.5rem;
                                 line-height: 130%;
                                 text-align: right;
                                 font-size: 18px;
@@ -382,6 +402,17 @@ body:not(.editing) {
                     }
                 }
             }
+            /* .mdl-left.py-2.changenumsections {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                padding: 0 !important;
+                a {
+                    position: absolute;
+                    bottom: 1rem;
+                    left: 1.5rem;
+                }
+            } */
         }
     }
     ul.section {
